--- a/sass/components/_mediaquery.scss
+++ b/sass/components/_mediaquery.scss
@@ -121,11 +121,6 @@
       h2 {
          font-size: 2em;
       }
-
-      h2,
-      p {
-         text-align: left;
-      }
    }
 
    form {
@@ -199,5 +194,15 @@
 
    .socials {
       justify-content: center;
+   }
+
+   .overview-text {
+      h1 {
+         font-size: 4em;
+      }
+
+      p {
+         font-size: 2em;
+      }
    }
 }
